RESOLVED FIXED159595
[JSC] Fix the Template Raw Value of \ (escape) + LineTerminatorSequence
https://bugs.webkit.org/show_bug.cgi?id=159595
Summary [JSC] Fix the Template Raw Value of \ (escape) + LineTerminatorSequence
Benjamin Poulain
Reported 2016-07-08 19:15:25 PDT
[JSC] Fix the Template Raw Value of \ (escape) + LineTerminatorSequence
Attachments
Patch (3.53 KB, patch)
2016-07-08 19:18 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-07-08 19:18:32 PDT
Yusuke Suzuki
Comment 2 2016-07-08 23:30:34 PDT
Comment on attachment 283240 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=283240&action=review r=me > Source/JavaScriptCore/ChangeLog:12 > + of TRV of LineTerminatorSequence." Nice catch!
WebKit Commit Bot
Comment 3 2016-07-09 00:34:08 PDT
Comment on attachment 283240 [details] Patch Clearing flags on attachment: 283240 Committed r203028: <http://trac.webkit.org/changeset/203028>
WebKit Commit Bot
Comment 4 2016-07-09 00:34:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.